@@ -13,17 +13,18 @@
       <name>SetColor</name>
       <argumentList>
         <argument>
+        <name>Color</name>
+          <relatedStateVariable>Color</relatedStateVariable>
+          <direction>in</direction>
+        </argument>
+
+        <argument>
         <name>NewColor</name>
           <retval />
           <relatedStateVariable>Color</relatedStateVariable>
           <direction>out</direction>
         </argument>
 
-        <argument>
-        <name>Color</name>
-          <relatedStateVariable>Color</relatedStateVariable>
-          <direction>in</direction>
-        </argument>
       </argumentList>
     </action>
 
@@ -54,19 +55,19 @@
     <action>
       <name>SetTint</name>
       <argumentList>
-         <argument>
+        <argument>
+        <name>Tint</name>
+          <relatedStateVariable>Tint</relatedStateVariable>
+          <direction>in</direction>
+        </argument>
+        <argument>
         <name>NewTint</name>
           <retval />
           <relatedStateVariable>Tint</relatedStateVariable>
           <direction>out</direction>
         </argument>
 
-        <argument>
-        <name>Tint</name>
-          <relatedStateVariable>Tint</relatedStateVariable>
-          <direction>in</direction>
-        </argument>
-      </argumentList>
+    </argumentList>
     </action>
 
     <action>
@@ -96,18 +97,18 @@
     <action>
       <name>SetContrast</name>
       <argumentList>
-        <argument>
+    	<argument>
+        	<name>Contrast</name>
+	          <relatedStateVariable>Contrast</relatedStateVariable>
+    	      <direction>in</direction>
+       	</argument>
+	    <argument>
         <name>NewContrast</name>
           <retval />
           <relatedStateVariable>Contrast</relatedStateVariable>
           <direction>out</direction>
         </argument>  
-        <argument>
-        <name>Contrast</name>
-          <relatedStateVariable>Contrast</relatedStateVariable>
-          <direction>in</direction>
-        </argument>
-      </argumentList>
+    </argumentList>
     </action>
 
     <action>
@@ -137,18 +138,16 @@
     <action>
       <name>SetBrightness</name>
       <argumentList>
-
+		<argument>
+        <name>Brightness</name>
+          <relatedStateVariable>Brightness</relatedStateVariable>
+          <direction>in</direction>
+        </argument>
          <argument>
         <name>NewBrightness</name>
           <retval />
           <relatedStateVariable>Brightness</relatedStateVariable>
           <direction>out</direction>
-        </argument>
-
-        <argument>
-        <name>Brightness</name>
-          <relatedStateVariable>Brightness</relatedStateVariable>
-          <direction>in</direction>
         </argument>
       </argumentList>
     </action>
@@ -180,7 +179,6 @@
     </action>
 
   </actionList>
-
 
 
   <serviceStateTable>
